// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion should be rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="uui-accordion-container container root mode-block"
  >
    <div
      aria-controls="«r1»"
      aria-expanded="false"
      class="uui-accordion-toggler"
      id="«r0»"
      role="button"
      tabindex="0"
    >
      <div
        class="uui-accordion-toggle-container"
      >
        <div
          class="uui-accordion-title"
        >
          Test title
        </div>
        <div
          class="container uui-icon uui-enabled arrow"
        >
          <svg
            class=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Accordion should be rendered correctly with props 1`] = `
<DocumentFragment>
  <div
    class="uui-accordion-container container uui-disabled root mode-inline padding-18"
  >
    <div
      aria-controls="«r3»"
      aria-disabled="true"
      aria-expanded="false"
      class="uui-accordion-toggler uui-disabled"
      id="«r2»"
      role="button"
      tabindex="-1"
    >
      <div
        class="uui-accordion-toggle-container"
      >
        <div
          class="uui-accordion-title"
        >
          Test title
        </div>
        <div
          class="container uui-icon uui-enabled uui-disabled arrow"
        >
          <svg
            class=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
